my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EANULL/T_EANULL-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EANULL_STRUCT_H
#define T_EANULL_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EANULL(void);


#endif /* not T_EANULL_STRUCT_H */
